.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0 - Unreleased
----------------

- Changed search.pt (plone_forms) and rss_template.pt (plone_templates) so they 
  display fullname instead of creator. 
  [ralphjacobs]

- Cleaned up old an unused scripts to edit the plone site object itself. This
  is done via the site control panel now.
  [hannosch]

- Hide the TinyMCE profiles hidden from the Plone site add form.
  [robgietema]

- Added 'Use site default' to the wysiwyg_editor field in the Personal
  Preferences view.
  [robgietema]

- Set default value of wysiwyg_editor to blank (use site default).
  [robgietema]

- Added default editor property to the site properties.
  [robgietema]

- Added TinyMCE and set TinyMCE as default visual editor.
  [robgietema]

- Removed getProductInfo method from the migration tool. It wasn't used
  anymore and depended on the persistent product registry.
  [hannosch]

- Inlined the enableSyndication function into importFinalSteps in
  setuphandlers. Avoid an unneeded catalog search.
  [hannosch]

- Simplified portal creation code and got rid of the PloneGenerator class in
  setuphandlers. It was a useless closure for independent functions.
  [hannosch]

- Removed the `plone-site` import step and stop overriding the
  `componentregistry` step. The portal object directly implements the
  IObjectManagerSite interface, so we don't need to activate it as a site
  manager in an extra step anymore.
  [hannosch]

- Updated and added various ZMI-visible tool titles.
  [hannosch]

- Removed the `plone-archetypes` import step. This is handled via a normal
  GenericSetup dependency in metadata.xml.
  [hannosch]

- Merged the `plone_various` import step into the `plone-final` step and
  install more packages directly by their profiles.
  [hannosch]
